ajuste para integracion continua