@@ -34,7 +34,13 @@
 			<artifactId>mail</artifactId>
 			<version>1.4.7</version>
 		</dependency>
-
+		<!-- Enero 27 -2016 plugin para sonar inicio-->
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-core</artifactId>
+			<version>2.0.8</version>
+		</dependency>
+		<!-- Enero 27 -2016 plugin para sonar fin-->
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava-testlib</artifactId>
@@ -342,6 +348,9 @@
 					<excludes>
 						<exclude>**/*_Roo_*</exclude>
 					</excludes>
+					<!-- Enero 27 -2016 plugin para sonar inicio-->
+					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+					<!-- Enero 27 -2016 plugin para sonar fin-->
 				</configuration>
 			</plugin>
 			<plugin>
@@ -458,6 +467,9 @@
 						<excludes>
 							<exclude>**/*_Roo_*</exclude>
 						</excludes>
+						<!-- Enero 27 -2016 plugin para sonar inicio-->
+						<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+						<!-- Enero 27 -2016 plugin para sonar fin-->
 					</configuration>
 				</plugin>
 				<plugin>
@@ -485,7 +497,19 @@
 						<dependenciesAsLibraries>true</dependenciesAsLibraries>
 					</configuration>
 				</plugin>
-
+				<!-- Enero 27 -2016 plugin para sonar inicio-->
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>cobertura-maven-plugin</artifactId>
+					<version>2.6</version>
+					<configuration>
+					<formats>
+						<format>html</format>
+						<format>xml</format>
+					</formats>
+				</configuration>
+				</plugin>
+				<!-- Enero 27 -2016 plugin para sonar fin-->
 				<plugin>
 					<groupId>org.eclipse.jetty</groupId>
 					<artifactId>jetty-maven-plugin</artifactId>
